[project]
name = "clamtuna"
version = "0.1.0"
description = "CLI guitar tuner with a chill terminal aesthetic"
requires-python = ">=3.14"
dependencies = [
    "textual>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
]

[project.scripts]
clamtuna = "clamtuna.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clamtuna"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
